# LetterboxdPlexSync

./: .gitignore  README.md  boxd_to_arr_sync.py  letterboxd_auth.py  letterboxd_scrape.py  overseerr.py  requirements.txt  setup.cfg
src/sync/: boxd_to_arr_sync.py
src/sync/lib/: letterboxd.py  overseerr.py  pyurl.py
