[metadata]
name = boxd_arr_sync
version = 1.1
author = Finn Drabsch
author_email = finndrabsch@gmail.com
description = A package to sync Letterboxd watchlist with Overseerr
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
package_dir=
    =src
packages = find_namespace:
python_requires = >=3.10
install_requires =
requests~=2.31.0
pandas~=2.2.2
python-dotenv~=1.0.1
getenv~=0.2.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    # Add console entry points here
    boxd_arr_sync = sync:boxd_to_arr_sync.app

