[metadata]
name = boxd_arr_sync
version = 1.2
author = Finn Drabsch
author_email = finndrabsch@gmail.com
description = A package to sync Letterboxd watchlist with Overseerr
readme = README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files=LICENSE

[options]
include_package_data = True
package_dir = =src
packages = find_namespace:
python_requires = >=3.10
install_requires =
    requests~=2.31.0
    pandas~=2.2.2
    python-dotenv~=1.0.1
    getenv~=0.2.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    boxd_arr_sync = sync:boxd_to_arr_sync.app

[project.urls]
Homepage = https://github.com/fsd16/LetterboxdPlexSync
